Update CrashDetectorFCMC.java, CrashDetectorFancyModLoader.java, Statics.java, and 6 more files